--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 .App {
-  font-family: sans-serif;
+  font-family: 'Roboto',sans-serif;
   text-align: center;
   font-size: 12px;
 
@@ -14,6 +14,8 @@
 }
 input{
   margin-right: 10px;
+	border-radius: 3px;
+	border: 1px solid #cccc;
 }
 
 .loading{
